--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
       "prefix": "toolsy-workspace",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "outputPath": "dist/apps/toolsy",
             "index": "apps/toolsy/src/index.html",
@@ -21,9 +21,17 @@
             "polyfills": "apps/toolsy/src/polyfills.ts",
             "tsConfig": "apps/toolsy/tsconfig.app.json",
             "aot": true,
-            "assets": ["apps/toolsy/src/favicon.ico", "apps/toolsy/src/assets"],
-            "styles": ["apps/toolsy/src/styles.scss"],
-            "scripts": []
+            "assets": [
+              "apps/toolsy/src/favicon.ico",
+              "apps/toolsy/src/assets"
+            ],
+            "styles": [
+              "apps/toolsy/src/styles.scss"
+            ],
+            "scripts": [],
+            "customWebpackConfig": {
+              "path": "./webpack.config.js"
+            }
           },
           "configurations": {
             "production": {
@@ -57,9 +65,12 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "browserTarget": "toolsy:build"
+            "browserTarget": "toolsy:build",
+            "customWebpackConfig": {
+              "path": "./webpack.config.js"
+            }
           },
           "configurations": {
             "production": {
@@ -80,7 +91,10 @@
               "apps/toolsy/tsconfig.app.json",
               "apps/toolsy/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/toolsy/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/toolsy/**/*"
+            ]
           }
         },
         "test": {
@@ -113,8 +127,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/toolsy-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/toolsy-e2e/**/*"]
+            "tsConfig": [
+              "apps/toolsy-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/toolsy-e2e/**/*"
+            ]
           }
         }
       }
