--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "10.2.1",
     "@angular/animations": "^10.0.0",
     "@angular/common": "^10.0.0",
     "@angular/compiler": "^10.0.0",
@@ -38,29 +37,36 @@
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
+    "@ikamva/ngx-tailwindcss": "^0.1.3",
+    "@nrwl/angular": "10.2.1",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
-    "@nrwl/workspace": "10.2.1",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.9.3",
-    "prettier": "2.0.4",
     "@angular/compiler-cli": "^10.0.0",
     "@angular/language-service": "^10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "8.3.1",
+    "@nrwl/cypress": "10.2.1",
     "@nrwl/jest": "10.2.1",
-    "jest": "26.2.2",
+    "@nrwl/workspace": "10.2.1",
     "@types/jest": "26.0.8",
-    "ts-jest": "26.1.4",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
     "cypress": "^4.1.0",
-    "@nrwl/cypress": "10.2.1"
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
+    "prettier": "2.0.4",
+    "ts-jest": "26.1.4",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.9.3",
+    "tailwindcss": "1.7.3",
+    "postcss-scss": "2.1.1",
+    "postcss-import": "12.0.1",
+    "postcss-loader": "3.0.0",
+    "@angular-builders/custom-webpack": "10.0.0"
   }
 }
