--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "10.0.0",
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "^10.0.0",
     "@angular/language-service": "^10.0.0",
     "@nrwl/cypress": "10.2.1",
     "@nrwl/jest": "10.2.1",
+    "@nrwl/storybook": "^10.3.1",
     "@nrwl/workspace": "10.2.1",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
@@ -58,15 +60,14 @@
     "eslint": "6.8.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
+    "postcss-import": "12.0.1",
+    "postcss-loader": "3.0.0",
+    "postcss-scss": "2.1.1",
     "prettier": "2.0.4",
+    "tailwindcss": "1.7.3",
     "ts-jest": "26.1.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.9.3",
-    "tailwindcss": "1.7.3",
-    "postcss-scss": "2.1.1",
-    "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0",
-    "@angular-builders/custom-webpack": "10.0.0"
+    "typescript": "~3.9.3"
   }
 }
