--- a/package.json
+++ b/package.json
@@ -29,29 +29,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.0",
-    "@angular/common": "^10.0.0",
-    "@angular/compiler": "^10.0.0",
-    "@angular/core": "^10.0.0",
-    "@angular/forms": "^10.0.0",
-    "@angular/platform-browser": "^10.0.0",
-    "@angular/platform-browser-dynamic": "^10.0.0",
-    "@angular/router": "^10.0.0",
+    "@angular/animations": "^10.1.3",
+    "@angular/common": "^10.1.3",
+    "@angular/compiler": "^10.1.3",
+    "@angular/core": "^10.1.3",
+    "@angular/forms": "^10.1.3",
+    "@angular/platform-browser": "^10.1.3",
+    "@angular/platform-browser-dynamic": "^10.1.3",
+    "@angular/router": "^10.1.3",
     "@ikamva/ngx-tailwindcss": "^0.1.3",
-    "@nrwl/angular": "10.2.1",
+    "@nrwl/angular": "10.3.1",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "^10.0.0",
-    "@angular/language-service": "^10.0.0",
-    "@nrwl/cypress": "10.2.1",
-    "@nrwl/jest": "10.2.1",
+    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular/cli": "~10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
+    "@angular/language-service": "^10.1.3",
+    "@nrwl/cli": "10.3.1",
+    "@nrwl/cypress": "10.3.1",
+    "@nrwl/jest": "10.3.1",
     "@nrwl/storybook": "^10.3.1",
-    "@nrwl/workspace": "10.2.1",
+    "@nrwl/workspace": "10.3.1",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
@@ -65,9 +66,9 @@
     "postcss-scss": "2.1.1",
     "prettier": "2.0.4",
     "tailwindcss": "1.7.3",
-    "ts-jest": "26.1.4",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.9.3"
+    "typescript": "~4.0.3"
   }
 }
