--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,13 @@
             "polyfills": "apps/toolsy/src/polyfills.ts",
             "tsConfig": "apps/toolsy/tsconfig.app.json",
             "aot": true,
-            "assets": ["apps/toolsy/src/favicon.ico", "apps/toolsy/src/assets"],
-            "styles": ["apps/toolsy/src/styles.scss"],
+            "assets": [
+              "apps/toolsy/src/favicon.ico",
+              "apps/toolsy/src/assets"
+            ],
+            "styles": [
+              "apps/toolsy/src/styles.scss"
+            ],
             "scripts": [],
             "customWebpackConfig": {
               "path": "./webpack.config.js"
@@ -86,7 +91,10 @@
               "apps/toolsy/tsconfig.app.json",
               "apps/toolsy/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/toolsy/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/toolsy/**/*"
+            ]
           }
         },
         "test": {
@@ -119,8 +127,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/toolsy-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/toolsy-e2e/**/*"]
+            "tsConfig": [
+              "apps/toolsy-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/toolsy-e2e/**/*"
+            ]
           }
         }
       }
@@ -136,9 +149,13 @@
           "options": {
             "tsConfig": [
               "libs/tool-ui/tsconfig.lib.json",
-              "libs/tool-ui/tsconfig.spec.json"
+              "libs/tool-ui/tsconfig.spec.json",
+              "libs/tool-ui/.storybook/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/tool-ui/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/tool-ui/**/*"
+            ]
           }
         },
         "test": {
@@ -147,11 +164,73 @@
             "jestConfig": "libs/tool-ui/jest.config.js",
             "passWithNoTests": true
           }
+        },
+        "storybook": {
+          "builder": "@nrwl/storybook:storybook",
+          "options": {
+            "uiFramework": "@storybook/angular",
+            "port": 4400,
+            "config": {
+              "configFolder": "libs/tool-ui/.storybook"
+            }
+          },
+          "configurations": {
+            "ci": {
+              "quiet": true
+            }
+          }
+        },
+        "build-storybook": {
+          "builder": "@nrwl/storybook:build",
+          "options": {
+            "uiFramework": "@storybook/angular",
+            "outputPath": "dist/storybook/tool-ui",
+            "config": {
+              "configFolder": "libs/tool-ui/.storybook"
+            }
+          },
+          "configurations": {
+            "ci": {
+              "quiet": true
+            }
+          }
         }
       },
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
+        }
+      }
+    },
+    "tool-ui-e2e": {
+      "root": "apps/tool-ui-e2e",
+      "sourceRoot": "apps/tool-ui-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/tool-ui-e2e/cypress.json",
+            "tsConfig": "apps/tool-ui-e2e/tsconfig.e2e.json",
+            "devServerTarget": "tool-ui:storybook"
+          },
+          "configurations": {
+            "ci": {
+              "devServerTarget": "tool-ui:storybook:ci"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/tool-ui-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/tool-ui-e2e/**/*"
+            ]
+          }
         }
       }
     }
