--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "@nrwl/jest": "10.3.1",
     "@nrwl/storybook": "^10.3.1",
     "@nrwl/workspace": "10.3.1",
+    "@storybook/addon-knobs": "^6.0.21",
+    "@storybook/angular": "^6.0.21",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "@types/webpack": "4.41.21",
     "codelyzer": "~5.0.1",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
