added card stying

--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       },
       "root": "apps/toolsy",
       "sourceRoot": "apps/toolsy/src",
-      "prefix": "toolsy-workspace",
+      "prefix": "toolsy",
       "architect": {
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
@@ -21,13 +21,8 @@
             "polyfills": "apps/toolsy/src/polyfills.ts",
             "tsConfig": "apps/toolsy/tsconfig.app.json",
             "aot": true,
-            "assets": [
-              "apps/toolsy/src/favicon.ico",
-              "apps/toolsy/src/assets"
-            ],
-            "styles": [
-              "apps/toolsy/src/styles.scss"
-            ],
+            "assets": ["apps/toolsy/src/favicon.ico", "apps/toolsy/src/assets"],
+            "styles": ["apps/toolsy/src/styles.scss"],
             "scripts": [],
             "customWebpackConfig": {
               "path": "./webpack.config.js"
@@ -91,10 +86,7 @@
               "apps/toolsy/tsconfig.app.json",
               "apps/toolsy/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/toolsy/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/toolsy/**/*"]
           }
         },
         "test": {
@@ -127,13 +119,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "apps/toolsy-e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/toolsy-e2e/**/*"
-            ]
+            "tsConfig": ["apps/toolsy-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/toolsy-e2e/**/*"]
           }
         }
       }
@@ -152,10 +139,7 @@
               "libs/tool-ui/tsconfig.spec.json",
               "libs/tool-ui/.storybook/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/tool-ui/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/tool-ui/**/*"]
           }
         },
         "test": {
@@ -223,13 +207,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "apps/tool-ui-e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/tool-ui-e2e/**/*"
-            ]
+            "tsConfig": ["apps/tool-ui-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/tool-ui-e2e/**/*"]
           }
         }
       }
