--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,24 +10,15 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@toolsy/tool-ui": [
-        "libs/tool-ui/src/index.ts"
-      ]
+      "@toolsy/tool-ui": ["libs/tool-ui/src/index.ts"],
+      "@toolsy/tool-overlay": ["libs/tool-overlay/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
