--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/common": "^10.1.3",
     "@angular/compiler": "^10.1.3",
     "@angular/core": "^10.1.3",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "^10.1.3",
     "@angular/platform-browser": "^10.1.3",
     "@angular/platform-browser-dynamic": "^10.1.3",
@@ -41,7 +42,8 @@
     "@ikamva/ngx-tailwindcss": "^0.1.3",
     "@nrwl/angular": "10.3.1",
     "rxjs": "~6.5.5",
-    "zone.js": "^0.10.2"
+    "zone.js": "^0.10.2",
+    "firebase": "^7.13.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.0",
@@ -73,6 +75,12 @@
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.0.3",
+    "@angular-devkit/architect": ">= 0.900 < 0.1100",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   }
 }
