--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
+    "deploy:rules:toolsy:prod": "firebase deploy --project production --only firestore,storage",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
