--- a/package.json
+++ b/package.json
@@ -31,51 +31,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.3",
-    "@angular/common": "^10.1.3",
-    "@angular/compiler": "^10.1.3",
-    "@angular/core": "^10.1.3",
+    "@angular/animations": "11.1.2",
+    "@angular/common": "11.1.2",
+    "@angular/compiler": "11.1.2",
+    "@angular/core": "11.1.2",
     "@angular/fire": "^6.0.3",
-    "@angular/forms": "^10.1.3",
-    "@angular/platform-browser": "^10.1.3",
-    "@angular/platform-browser-dynamic": "^10.1.3",
-    "@angular/router": "^10.1.3",
+    "@angular/forms": "11.1.2",
+    "@angular/platform-browser": "11.1.2",
+    "@angular/platform-browser-dynamic": "11.1.2",
+    "@angular/router": "11.1.2",
     "@ikamva/ngx-tailwindcss": "^0.1.3",
-    "@nrwl/angular": "10.3.1",
+    "@nrwl/angular": "11.2.0-rc.2",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2",
     "firebase": "^7.13.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.0",
-    "@angular-devkit/build-angular": "~0.1001.3",
-    "@angular/cli": "~10.1.3",
-    "@angular/compiler-cli": "^10.1.3",
-    "@angular/language-service": "^10.1.3",
+    "@angular-devkit/build-angular": "0.1100.7",
+    "@angular/cli": "11.0.7",
+    "@angular/compiler-cli": "11.1.2",
+    "@angular/language-service": "11.1.2",
     "@nrwl/cli": "10.3.1",
-    "@nrwl/cypress": "10.3.1",
-    "@nrwl/jest": "10.3.1",
-    "@nrwl/storybook": "^10.3.1",
-    "@nrwl/workspace": "10.3.1",
+    "@nrwl/cypress": "11.2.0-rc.2",
+    "@nrwl/jest": "11.2.0-rc.2",
+    "@nrwl/storybook": "11.2.0-rc.2",
+    "@nrwl/workspace": "11.2.0-rc.2",
     "@storybook/addon-knobs": "^6.0.21",
     "@storybook/angular": "^6.0.21",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "12.12.38",
     "@types/webpack": "4.41.21",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "6.0.1",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
+    "jest-preset-angular": "8.3.2",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-scss": "2.1.1",
-    "prettier": "2.0.4",
+    "prettier": "2.2.1",
     "tailwindcss": "1.7.3",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "typescript": "~4.0.3",
     "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "firebase-tools": "^8.0.0",
