--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser": "11.1.2",
     "@angular/platform-browser-dynamic": "11.1.2",
     "@angular/router": "11.1.2",
+    "@ikamva/ngx-tailwindcss": "^1.0.2",
     "@nrwl/angular": "11.2.10",
     "firebase": "^8.2.5",
     "rxjs": "~6.6.3",
@@ -77,6 +78,11 @@
     "ts-jest": "26.4.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "~4.0.3"
+    "typescript": "~4.0.3",
+    "tailwindcss": "2.0.2",
+    "postcss": "8.2.4",
+    "postcss-scss": "3.0.4",
+    "postcss-import": "14.0.0",
+    "postcss-loader": "5.0.0"
   }
 }
