--- a/angular.json
+++ b/angular.json
@@ -68,10 +68,7 @@
         "serve": {
           "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "browserTarget": "toolsy:build",
-            "customWebpackConfig": {
-              "path": "./webpack.config.js"
-            }
+            "browserTarget": "toolsy:build"
           },
           "configurations": {
             "production": {
