--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.0.0",
-    "@angular-devkit/architect": ">= 0.900 < 0.1100",
-    "@angular-devkit/build-angular": "0.1100.7",
-    "@angular/cli": "11.0.7",
+    "@angular-devkit/architect": "0.1101.2",
+    "@angular-devkit/build-angular": "0.1101.2",
+    "@angular/cli": "11.1.2",
     "@angular/compiler-cli": "11.1.2",
     "@angular/language-service": "11.1.2",
     "@nrwl/cli": "11.2.10",
@@ -60,29 +60,30 @@
     "@nrwl/workspace": "11.2.10",
     "@storybook/addon-knobs": "^6.1.16",
     "@storybook/angular": "^6.1.16",
-    "@types/jest": "26.0.8",
-    "@types/node": "12.12.38",
-    "@types/webpack": "4.41.21",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.25",
+    "@types/webpack": "4.41.26",
+    "autoprefixer": "^10.2.4",
     "codelyzer": "6.0.1",
-    "cypress": "^4.1.0",
-    "dotenv": "6.2.0",
-    "eslint": "6.8.0",
+    "cypress": "^6.4.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.19.0",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jest": "26.2.2",
+    "jest": "26.6.3",
     "jest-preset-angular": "8.3.2",
     "open": "^7.0.3",
+"postcss": "^8.2.4",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-scss": "^3.0.4",
     "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "tailwindcss": "2.0.2",
+    "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "~4.0.3",
-    "tailwindcss": "2.0.2",
-    "postcss": "8.2.4",
-    "postcss-scss": "3.0.4",
-    "postcss-import": "14.0.0",
-    "postcss-loader": "5.0.0"
+    "typescript": "~4.1.3"
   }
 }
