--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "@angular/router": "11.1.2",
     "@ikamva/ngx-tailwindcss": "^1.0.2",
     "@nrwl/angular": "11.2.10",
+    "@w11k/angular-sticky-things": "^1.3.1",
+    "algoliasearch": "^4.8.4",
     "firebase": "^8.2.5",
+    "overlayscrollbars-ngx": "^0.2.3",
     "rxjs": "~6.6.3",
     "zone.js": "^0.11.3"
   },
@@ -62,6 +65,7 @@
     "@storybook/angular": "^6.1.16",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.25",
+    "@types/overlayscrollbars": "^1.12.0",
     "@types/webpack": "4.41.26",
     "autoprefixer": "^10.2.4",
     "codelyzer": "6.0.1",
@@ -75,7 +79,7 @@
     "jest": "26.6.3",
     "jest-preset-angular": "8.3.2",
     "open": "^7.0.3",
-"postcss": "^8.2.4",
+    "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
     "postcss-loader": "^4.0.4",
     "postcss-scss": "^3.0.4",
