--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "@angular/platform-browser-dynamic": "11.1.2",
     "@angular/router": "11.1.2",
     "@ikamva/ngx-tailwindcss": "^1.0.2",
+    "@ng-web-apis/common": "^1.9.0",
+    "@ng-web-apis/intersection-observer": "^2.1.0",
     "@nrwl/angular": "11.2.10",
-    "@w11k/angular-sticky-things": "^1.3.1",
     "algoliasearch": "^4.8.4",
     "firebase": "^8.2.5",
     "overlayscrollbars-ngx": "^0.2.3",
