--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ikamva/ngx-tailwindcss": "^1.0.2",
     "@ng-web-apis/common": "^1.9.0",
     "@ng-web-apis/intersection-observer": "^2.1.0",
+    "@ngneat/content-loader": "^6.0.0",
     "@nrwl/angular": "11.2.10",
     "algoliasearch": "^4.8.4",
     "firebase": "^8.2.5",
