can select categories

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "ng serve",
     "build": "ng build",
     "deploy:rules:toolsy:prod": "firebase deploy --project production --only firestore,storage",
+    "deploy:host:toolsy:prod": "firebase deploy --project production --only hosting",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
@@ -45,6 +46,7 @@
     "@ng-web-apis/intersection-observer": "^2.1.0",
     "@ngneat/content-loader": "^6.0.0",
     "@nrwl/angular": "11.2.10",
+    "@yellowspot/ng-truncate": "^2.0.0",
     "algoliasearch": "^4.8.4",
     "firebase": "^8.2.5",
     "overlayscrollbars-ngx": "^0.2.3",
